# cdn-s3-lab

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: 01-object-storage-paradigm.md  02-rustfs-architecture.md  03-data-lakehouse.md  04-erasure-coding.md  05-fault-tolerance.md  06-multipart-fragmentation.md
notebooks/: 00_setup_check.ipynb  01_boto3_basics.ipynb  02_pandas_s3fs_parquet.ipynb  03_multipart_upload.ipynb  04_fault_tolerance.ipynb  05_versioning.ipynb  06_erasure_coding.ipynb  07_reed_solomon_from_scratch.ipynb  08_benchmarking.ipynb  09_cdn_edge_cache.ipynb  10_cluster_visualizer.ipynb  11_datalake_roadmap.ipynb
scripts/: lab_utils.py
tests/: test_lab_utils.py  test_notebooks.py
