[project]
name = "cdn-s3-lab"
version = "1.0.0"
description = "Hands-on Object Storage Lab with RustFS, Erasure Coding, and Data Lakehouse"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.1",
    "boto3>=1.34",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "ipywidgets>=8.1",
    "matplotlib>=3.8",
    "s3fs>=2024.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "nbmake>=1.5",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
